C/RushQuantClientDemo/rushquant.h

typedef int BOOL;
// 系统初始化。
RUSHQUANT_API BOOL rushquant_initialize(const char* pUsername, const char* pKey);
// 释放由系统生成的内存。
RUSHQUANT_API void rushquant_free(void* pointer);
// 系统销毁，释放资源。
RUSHQUANT_API BOOL rushquant_dispose();
// 获取支持账户编号列表, 返回账户个数。
RUSHQUANT_API int rushquant_trade_GetAccountList(int* accountIds);
// 重置账户环境，如果指定账户已经登录并处于正常工作状态，则退出并重置状态。
RUSHQUANT_API BOOL rushquant_trade_Reset(int accountId);
// 获取系统的下一个编号，用于请求的输入编号。
RUSHQUANT_API int rushquant_trade_NextId();
typedef struct
{
    int Id;                              /* 编号 */

    char TradePassword[12];              /* 交易密码 */
    char CommunicationPassword[12];      /* 通讯密码 */
} LoginInput;
typedef struct
{
    unsigned int Size;                   /* 结构大小 */
    int Id;                              /* 编号 */
    char ErrorMessage[100];              /* 错误消息 */
} LoginOutput;
// 登录指定的帐户。
RUSHQUANT_API BOOL rushquant_trade_Login(int accountId, const LoginInput* pInput, LoginOutput* pOutput);
typedef struct
{
    int Id;                              /* 编号 */

    char ExchangeId[10];                 /* 交易所代码 */
    char InstrumentCode[16];             /* 合约代码 */
} QueryTickDataInput;
typedef struct
{
    unsigned int Size;                   /* 结构大小 */
    int Id;                              /* 编号 */
    char ErrorMessage[100];              /* 错误消息 */

    char ExchangeId[10];                 /* 交易所代码 */
    char InstrumentCode[16];             /* 合约代码 */
    char InstrumentName[32];             /* 合约名称 */
    double PreClosePrice;                /* 昨收价 */
    double OpenPrice;                    /* 今开价 */
    double LatestPrice;                  /* 当前价 */
    double BidPrice1;                    /* 买一价 */
    double BidPrice2;                    /* 买二价 */
    double BidPrice3;                    /* 买三价 */
    double BidPrice4;                    /* 买四价 */
    double BidPrice5;                    /* 买五价 */
    int BidVolume1;                      /* 买一量 */
    int BidVolume2;                      /* 买二量 */
    int BidVolume3;                      /* 买三量 */
    int BidVolume4;                      /* 买四量 */
    int BidVolume5;                      /* 买五量 */
    double AskPrice1;                    /* 卖一价 */
    double AskPrice2;                    /* 卖二价 */
    double AskPrice3;                    /* 卖三价 */
    double AskPrice4;                    /* 卖四价 */
    double AskPrice5;                    /* 卖五价 */
    int AskVolume1;                      /* 卖一量 */
    int AskVolume2;                      /* 卖二量 */
    int AskVolume3;                      /* 卖三量 */
    int AskVolume4;                      /* 卖四量 */
    int AskVolume5;                      /* 卖五量 */
} QueryTickDataOutput;
// 查询合约的五档Tick行情数据。
RUSHQUANT_API BOOL rushquant_trade_QueryTickData(int accountId, const QueryTickDataInput* pInput, QueryTickDataOutput** pOutput);
typedef struct
{
    int Id;                              /* 编号 */
} QueryStockholderInfoInput;
typedef struct
{
    unsigned int Size;                   /* 结构大小 */
    int Id;                              /* 编号 */
    char ErrorMessage[100];              /* 错误消息 */

    int Count;                           /* 项目条数 */
    QueryStockholderInfoOutputItem Items[];
} QueryStockholderInfoOutput;
// 查询股东信息，获取沪深A股东号码列表。
RUSHQUANT_API BOOL rushquant_trade_QueryStockholderInfo(int accountId, const QueryStockholderInfoInput* pInput, QueryStockholderInfoOutput** pOutput);
typedef struct
{
    int Id;                              /* 编号 */
} QuerySecurityCapitalInfoInput;
typedef struct
{
    unsigned int Size;                   /* 结构大小 */
    int Id;                              /* 编号 */
    char ErrorMessage[100];              /* 错误消息 */

    int Count;                           /* 项目条数 */
    QuerySecurityCapitalInfoOutputItem Items[];
} QuerySecurityCapitalInfoOutput;
// 查询证券资产信息，获取账户的资产列表。
RUSHQUANT_API BOOL rushquant_trade_QuerySecurityCapitalInfo(int accountId, const QuerySecurityCapitalInfoInput* pInput, QuerySecurityCapitalInfoOutput** pOutput);
typedef struct
{
    int Id;                              /* 编号 */
} QuerySecurityPositionInfoInput;
typedef struct
{
    unsigned int Size;                   /* 结构大小 */
    int Id;                              /* 编号 */
    char ErrorMessage[100];              /* 错误消息 */

    int Count;                           /* 项目条数 */
    QuerySecurityPositionInfoOutputItem Items[];
} QuerySecurityPositionInfoOutput;
// 查询证券持仓信息，获取账户的持仓列表。
RUSHQUANT_API BOOL rushquant_trade_QuerySecurityPositionInfo(int accountId, const QuerySecurityPositionInfoInput* pInput, QuerySecurityPositionInfoOutput** pOutput);
typedef struct
{
    int Id;                              /* 编号 */

    char ExchangeId[10];                 /* 交易所代码 */
    char InstrumentCode[16];             /* 合约代码 */
    double OrderPrice;                   /* 委托价格 */
    double LatestPrice;                  /* 最新价格 */
    double CapitalAmount;                /* 资金总额 */
} QuerySecurityOrderEvaluationInput;
typedef struct
{
    unsigned int Size;                   /* 结构大小 */
    int Id;                              /* 编号 */
    char ErrorMessage[100];              /* 错误消息 */

    double BidableVolume;                /* 可买数量 */
} QuerySecurityOrderEvaluationOutput;
// 查询证券委托评估，获取当前可用资金条件下指定证券可委托数量。
RUSHQUANT_API BOOL rushquant_trade_QuerySecurityOrderEvaluation(int accountId, const QuerySecurityOrderEvaluationInput* pInput, QuerySecurityOrderEvaluationOutput** pOutput);
typedef struct
{
    int Id;                              /* 编号 */
} QuerySecurityIntradayOrderInput;
typedef struct
{
    unsigned int Size;                   /* 结构大小 */
    int Id;                              /* 编号 */
    char ErrorMessage[100];              /* 错误消息 */

    int Count;                           /* 项目条数 */
    QuerySecurityIntradayOrderOutputItem Items[];
} QuerySecurityIntradayOrderOutput;
// 查询证券当日委托，获取证券委托列表。
RUSHQUANT_API BOOL rushquant_trade_QuerySecurityIntradayOrder(int accountId, const QuerySecurityIntradayOrderInput* pInput, QuerySecurityIntradayOrderOutput** pOutput);
typedef struct
{
    int Id;                              /* 编号 */

    int BeginDate;                       /* 开始日期 */
    int EndDate;                         /* 终止日期 */
} QuerySecurityHistoricalOrderInput;
typedef struct
{
    unsigned int Size;                   /* 结构大小 */
    int Id;                              /* 编号 */
    char ErrorMessage[100];              /* 错误消息 */

    int Count;                           /* 项目条数 */
    QuerySecurityHistoricalOrderOutputItem Items[];
} QuerySecurityHistoricalOrderOutput;
// 查询证券历史委托，获取证券委托列表。
RUSHQUANT_API BOOL rushquant_trade_QuerySecurityHistoricalOrder(int accountId, const QuerySecurityHistoricalOrderInput* pInput, QuerySecurityHistoricalOrderOutput** pOutput);
typedef struct
{
    int Id;                              /* 编号 */
} QuerySecurityIntradayDealInput;
typedef struct
{
    unsigned int Size;                   /* 结构大小 */
    int Id;                              /* 编号 */
    char ErrorMessage[100];              /* 错误消息 */

    int Count;                           /* 项目条数 */
    QuerySecurityIntradayDealOutputItem Items[];
} QuerySecurityIntradayDealOutput;
// 查询证券当日成交，获取证券成交列表。
RUSHQUANT_API BOOL rushquant_trade_QuerySecurityIntradayDeal(int accountId, const QuerySecurityIntradayDealInput* pInput, QuerySecurityIntradayDealOutput** pOutput);
typedef struct
{
    int Id;                              /* 编号 */

    int BeginDate;                       /* 开始日期 */
    int EndDate;                         /* 终止日期 */
} QuerySecurityHistoricalDealInput;
typedef struct
{
    unsigned int Size;                   /* 结构大小 */
    int Id;                              /* 编号 */
    char ErrorMessage[100];              /* 错误消息 */

    int Count;                           /* 项目条数 */
    QuerySecurityHistoricalDealOutputItem Items[];
} QuerySecurityHistoricalDealOutput;
// 查询证券历史成交，获取证券成交列表。
RUSHQUANT_API BOOL rushquant_trade_QuerySecurityHistoricalDeal(int accountId, const QuerySecurityHistoricalDealInput* pInput, QuerySecurityHistoricalDealOutput** pOutput);